--- a/client/src/components/Login/style.scss
+++ b/client/src/components/Login/style.scss
@@ -40,7 +40,7 @@
             }
             
             input {
-                margin-top: 6px;
+                // margin-top: 6px;
                 min-width: 18em;
                 height: 37px;
                 padding: 6px 10px;
@@ -49,7 +49,7 @@
                 background-color: #f3f3f3;
                 border: 0;
                 border-radius: 4px;
-                margin-bottom: 31px;
+                // margin-bottom: 31px;
                 transition: all 250ms ease-in-out;
                 &:focus {
                     outline: none;
