--- a/client/src/components/SideBar/SideBar.css
+++ b/client/src/components/SideBar/SideBar.css
@@ -12,3 +12,30 @@
     color: #fff;
     transition: all 0.3s;
 }
+
+.sideBarMainItem {
+    border-style: solid;
+    border-width: 2px;
+    border-color: #3a3e47;
+    padding: 10px;
+    margin: 30px;
+}
+
+.sideBarMainItemText {
+    color: #3a3e47;
+    font-size: 20px;
+    display: inline-block;
+}
+
+.sideBarTeamItem {
+    border-style: solid;
+    border-width: 2px;
+    border-color: #3a3e47;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 30px;
+}
+
+.sideBarTeamLink {
+}
