--- a/client/src/components/SideBar/SideBar.css
+++ b/client/src/components/SideBar/SideBar.css
@@ -17,8 +17,8 @@
     border-style: solid;
     border-width: 2px;
     border-color: #3a3e47;
-    padding: 10px;
-    margin: 30px;
+    padding: 5px;
+    margin-bottom: 10px;
 }
 
 .sideBarMainItemText {
@@ -30,11 +30,8 @@
 .sideBarTeamItem {
     border-style: solid;
     border-width: 2px;
-    border-color: #3a3e47;
-    padding: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: 30px;
+    border-color: #3a3e47; 
+    margin: 1px;
 }
 
 .sideBarTeamLink {
