formatted sidebar and pulled API update calls out

--- a/client/src/components/FavoriteTeamBtn/FavoriteTeamBtn.css
+++ b/client/src/components/FavoriteTeamBtn/FavoriteTeamBtn.css
@@ -1,6 +1,9 @@
 .react-switch {
-  vertical-align: right;
+  vertical-align: middle;
   margin-left: 4px;
 }
 
+.favoriteTeamToggle {
+  float: right;
+}
 
