--- a/client/src/components/SideBar/SideBar.css
+++ b/client/src/components/SideBar/SideBar.css
@@ -11,6 +11,7 @@
     z-index: 999;
     color: #fff;
     transition: all 0.3s;
+    overflow: scroll
 }
 
 .sideBarMainItem {
@@ -19,6 +20,8 @@
     border-color: #3a3e47;
     padding: 5px;
     margin-bottom: 10px;
+    margin-right: 10px;
+    clear: both;
 }
 
 .sideBarMainItemText {
@@ -27,12 +30,27 @@
     display: inline-block;
 }
 
-.sideBarTeamItem {
+#faveTeamsList{
+    overflow-y: auto;
+}
+
+.listItem {
     border-style: solid;
     border-width: 2px;
     border-color: #3a3e47; 
     margin: 1px;
+    overflow: hidden; 
 }
 
-.sideBarTeamLink {
+.listItemText {
+    float: left;
+}
+
+.sideBarTeamLinkText{
+    float: left;
+}
+
+.faveBtnContainer {
+    float: right;
+    margin-right: 2px;
 }
