change favorite team style.

--- a/client/src/components/SideBar/SideBar.css
+++ b/client/src/components/SideBar/SideBar.css
@@ -54,3 +54,18 @@
     float: right;
     margin-right: 2px;
 }
+
+.star {
+    visibility:hidden;
+    font-size:16px;
+    cursor:pointer;
+}
+.star:before {
+   content: "\2606";
+   position: relative;
+   visibility:visible;
+}
+.star:checked:before {
+    content: "\2605";
+   position: relative;
+}
