--- a/client/src/components/Nav/NavList.css
+++ b/client/src/components/Nav/NavList.css
@@ -1,5 +1,5 @@
 .menu {
-    background-color: grey;
+    background-color: #d1d1d1;
     box-shadow: 0px 2px 24px 0px rgba(0, 0, 0, 0.15);
     width: 100%;
     height: 80px;
@@ -47,12 +47,12 @@
 }
 
 .menu__link:hover {
-    color: #ffaa3b;
+    color: #ff8400;
 }
 
 .menu__link--active {
-    color: #ffaa3b;
-    border-top: 4px solid #ffaa3b;
+    color: #ff8400;
+    border-top: 4px solid #ff8400;
     font-weight: 700;
 }
 
