--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -10,6 +10,13 @@
     position: relative;
 }
 
+h1 {
+    display: block;
+    text-align:center;
+    float: none;
+    vertical-align: top;
+}
+
 .navRight {
     display: flex;
     align-items: center;
@@ -59,9 +66,8 @@
 
 
 .navLogo {
-    display: inline-block;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     background-size: cover 100%;
     background-repeat: no-repeat;
     background-position: center;
