--- a/client/src/components/Nav/NavList.css
+++ b/client/src/components/Nav/NavList.css
@@ -1,95 +1,41 @@
-.menu {
-    background-color: #d1d1d1;
-    box-shadow: 0px 2px 24px 0px rgba(0, 0, 0, 0.15);
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #3a3e47;
-}
-
-.menu__right {
-    display: flex;
-    align-items: center;
-    height: 100%;
-}
-
-.menu__list {
-    list-style-type: none;
-    padding: 0;
-    height: 100%;
-    margin: 0;
-    margin-right: 40px;
-}
-
-.menu__list-item {
-    display: inline-block;
-    height: 100%;
-    margin-right: 20px;
-}
-
-.menu__list-item:last-child {
-    margin-right: 0;
-}
-
-.menu__link {
-    color: #3a3e47;
-    display: inline-block;
-    height: 100%;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    padding: 0 3px;
-}
-
-.menu__link:hover {
-    color: #ff8400;
-}
-
-.menu__link--active {
-    color: #ff8400;
-    border-top: 4px solid #ff8400;
+.navbar {
+    text-transform: uppercase; 
     font-weight: 700;
+    font-size: .9rem;
+    letter-spacing: .1rem;
+    opacity: .92;
+}
+.navbar-brand img {
+    height: 2rem;
 }
 
-.menu__logo {
-    text-indent: -9999999px;
-    display: inline-block;
-    height: 100%;
-    width: 4.4%;
-    background-size: cover 100%;
-    background-position: center;
-    margin: 0;
+.navbar-nav li {
+    padding-right: .7rem;
 }
 
-.menu__search-button {
-    height: 42px;
-    width: 42px;
-    border-radius: 50%;
-    border: 1px solid #c8c9ce;
-    background-color: transparent;
-    outline: none;
-    cursor: pointer;
-    background-repeat: no-repeat;
-    background-position: center;
+.nav-link {
+    color: white;
+    padding-top: .8rem;
 }
 
-.menu__search-form {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    padding: 10px;
-    background-color: white;
+.nav-link.active, 
+.nav-link:hover {
+    color: #e66722;
 }
 
-.menu__search-input {
-    outline: none;
-    border: 1px solid #c8c9ce;
-    font-size: 18px;
-    padding: 5px;
-    font-weight: 300;
+.btn {
+    margin: .2rem;
+}
+
+.btn-outline-light {
+    border-radius: 1rem;
+    border-width: .15rem;
+    border-color: #e66722;
+}
+
+.btn-outline-light:hover {
+    border-radius: 1.2rem;
+    border-width: .15rem;
+    border-color: #e66722;
+    opacity: .7;
 }
