brought register button into landing page

--- a/client/src/components/Landing/Landing.css
+++ b/client/src/components/Landing/Landing.css
@@ -11,9 +11,17 @@ body {
 }
 
 .btn-outline-light {
+  border-radius: 1.2rem;
+  border-width: .4rem;
+  border-color: #e66722;
+  padding: ;
+}
+
+.btn-outline-dark {
     border-radius: 1.2rem;
     border-width: .4rem;
     border-color: #e66722;
+    padding: ;
 }
 
 .btn-outline-light:hover {
