--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -15,15 +15,17 @@ body {
     position: relative;
     width: 100%;
     z-index: -1;
-  }
-  .home-wrap {
+}
+
+.home-wrap {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-  }
-  .home-inner {
+}
+
+.home-inner {
     position: fixed;
     display: table;
     top: 0;
@@ -33,6 +35,12 @@ body {
     background-size: cover;
     background-position: center center;
     -webkit-transform: translateZ(0);
-            transform: translateZ(0);
+    transform: translateZ(0);
     will-change: transform;
-  }
+}
+
+.jumbotron {
+    padding: 1rem;
+    height: 70vh;
+    margin: 1rem;
+}
