--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -40,7 +40,8 @@ body {
 }
 
 .jumbotron {
-    padding: 1rem;
-    height: 70vh;
-    margin: 1rem;
+    background: rgba(204, 204, 204, 0.9);
+    padding: 1.5rem;
+    height: 75vh;
+    margin: 2rem;
 }
