--- a/client/src/pages/Favorites.css
+++ b/client/src/pages/Favorites.css
@@ -7,7 +7,8 @@ body {
 }
 
 .jumbotron {
-    padding: 1rem;
+    background: rgba(204, 204, 204, 0.9);
+    padding: 1.5rem;
     height: 80vh;
     margin: 2rem;
 }
